# LAT-Exp

./: .gitignore  README.md  main.cpp
Armstrong_backup/Data/0118 - Run1/: data.csv  example_pos.cpp
Armstrong_backup/Data/0118 - Run2/: Readme.txt  data.csv  example_pos.cpp
Armstrong_backup/Loadcell Data/: data_loadcell.csv
Armstrong_backup/Lossless/: CMakeLists.txt  data.csv  example_cal.cpp  example_encoder.cpp  example_pos.cpp  example_vel.cpp  example_vel_lin_car.cpp
Armstrong_backup/No Spring/: data.csv  example_cal.cpp  example_pos_friction_map_velocity_motor.cpp  example_pos_siction_motor_only.cpp  example_pos_spring_friction_lin_2way.cpp  example_pos_spring_friction_sin_2way.cpp  example_pos_spring_friction_sin_2way_v2.cpp  example_pos_stiction_v3.cpp
Armstrong_backup/No Spring/Older Scripts/: example_cal2.cpp  example_pos_friction.cpp  example_pos_friction_carriage.cpp  example_pos_friction_map_1step.cpp  example_pos_friction_map_1step_sin.cpp  example_pos_friction_map_velocity.cpp  example_pos_friction_qs.cpp  example_pos_stop.cpp  example_pos_stop_torque.cpp
Armstrong_backup/SpringFriction/: CMakeLists.txt  example.cpp  example_pos_friction_map_v2_sin.cpp  example_pos_friction_map_v3_linear.cpp  example_pos_friction_map_v3_sin.cpp  example_pos_spring_friction_sin.cpp  example_pos_spring_friction_sin_1way.cpp
Armstrong_backup/SpringFriction/Older Scripts/: example_cal1.cpp  example_pos2.cpp  example_pos_def.cpp  example_pos_friction_map_vel_poscontr.cpp
Final report/: main.tex  references.bib
MATLAB Processing scripts/: fFindRatio.m  fFindRatio_v2.m  fFindRatio_v3.m  fFindRatio_v4.m  fIntVelDriven.m  fProcessData.m  fProcessData_v3.m  fSyncData_v2.m  fTorsion_v4.m  fTorsion_v5.m  fVarspringTorqueODE.m  fVarspringTorqueODE_v2.m  stiction_Spring_Connected_Processing.m
MATLAB Processing scripts/Data/1104 - Run14/: data_loadcell.csv  example_pos.cpp
MATLAB Processing scripts/Data/1114 - Run3/: data_loadcell.csv
MATLAB Processing scripts/Data/1116 - Run9/: data.csv
MATLAB Processing scripts/Data/1212 - Run2/: data_loadcell.csv
Old Code/: .gitignore  CMakeLists.txt  README.md  README_mcs.md  data.csv  mcs_readme.txt
Old Code/MATLAB Processing scripts/: device_Law_Processing.m  dynamic_Resitance_Processing.asv  dynamic_Resitance_Processing.m  fFrictionModelA.m  fIntVelDriving.m  fMatchTorque.m  fMinStiffness_v4.m  fProcessData_v2.m  fSyncData_v3.m  fSyncData_v4.m  fTorsion_v2.m  fTorsion_v3.m  fVarspringODE.m  fVarspringTorqueODE_v3.m  stiction_Spring_Disconnected_Processing.m
Old Code/MATLAB Processing scripts/Data/1104 - Run14/: Readme.txt
Old Code/MATLAB Processing scripts/Data/1114 - Run3/: Readme.txt  data.csv
Old Code/MATLAB Processing scripts/Data/1116 - Run9/: example_pos.cpp
Old Code/MATLAB Processing scripts/Data/1212 - Run2/: data.csv  example_pos.cpp  readme.txt
Old Code/MATLAB Sample Data/Device_Law_Data/: example_vel.cpp
Old Code/MATLAB Sample Data/Dynamic_Resistance_Data/: Readme.txt  data_loadcell.csv
Old Code/Scripts/: Stiction_Spring.cpp  Test_Encoder.cpp  test1.cpp
Scripts/: Stiction_No_Spring.cpp
fst29/dataProcessing/: compileData.py  curvefitting.py  curvefittingDynamic.py  getStaticFrictionValues.py  plotGenerator.py  separateStiction.py  springPeakFinder.py
fst29/encoderInterrupt/: CMakeLists.txt  encoderInterrupt  encoderInterrupt.cpp
fst29/encoderTest/: CMakeLists.txt  encoderTest.cpp
fst29/gui/: CMakeLists.txt  gui.py  guiDriver.cpp  startGui.sh
fst29/motorDriver/: CMakeLists.txt  motorDriver.cpp
fst29/namedPipeTest/: CMakeLists.txt  reader.cpp  reader.py  writer.cpp  writer.py
